# amd-hsakmt

./: .gitignore  COPYING  INSTALL  Makefile.am  README  RELEASING  configure.ac  hsakmt-1-uninstalled.pc.in  hsakmt-1.pc.in
hsakmt/: .gitignore  Makefile.am  Makefile.sources  debug.c  events.c  fmm.c  hsakmt-version.h.in  libhsakmt.h  memory.c  perfctr.c  queues.c  time.c  topology.c  version.c
hsakmt/include/: hsakmt.h
include/: hsakmttypes.h
include/linux/: kfd_ioctl.h
src/: events.c  queues.c  topology.c
